# CnEquityStrategies

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: platform_integration.md
docs/research/: cn_csi500_multi_factor_backtest_20260628.json  cn_dividend_quality_proxy_20260628.json  cn_dividend_quality_proxy_backtest_20260627.md  cn_dividend_quality_proxy_v2_20260628.json  cn_dividend_quality_sweep_20260628.json  cn_dual_track_aggressive_expanded_2017_2026.json  cn_etf_momentum_stock_combo_20260628.json  cn_etf_proxy_backtest_20260627.md  cn_index_etf_tactical_rotation.md  cn_industry_etf_rotation_design_20260627.md  cn_live_candidate_evaluation_20260628.json  cn_ma120_phase2_return_focused_20260628.json  cn_ma120_phase2_tri_track_blend_20260628.json  cn_ma120_phase3_pit_and_cap_20260628.json  cn_ma120_vol25_stock_sleeve_research_plan_20260628.md  cn_ma120_vol_and_combo_scan_20260628.json  cn_momentum_csi1000_full_20260628.json  cn_momentum_csi500_riskoff_tuning_20260628.json  cn_momentum_stock_csi500_full_20260628.json  cn_strategy_promotion_roadmap_20260628.md  cn_strategy_selection_20260627.md
scripts/: research_cn_combo_unified_simulator.py  research_cn_csi500_multi_factor_backtest.py  research_cn_dividend_quality_param_sweep.py  research_cn_dividend_quality_snapshot_proxy_backtest.py  research_cn_dual_track_combo_proxy_backtest.py  research_cn_etf_momentum_stock_combo_proxy_backtest.py  research_cn_etf_pool_and_params_comparison.py  research_cn_index_etf_tactical_rotation_proxy_backtest.py  research_cn_industry_etf_rotation_aggressive_matrix.py  research_cn_industry_etf_rotation_validation.py  research_cn_live_candidate_evaluation.py  research_cn_ma120_phase2_return_focused.py  research_cn_ma120_phase2_tri_track_blend.py  research_cn_ma120_phase3_pit_and_cap.py  research_cn_ma120_vol_and_combo_scan.py  research_cn_momentum_stock_rotation_proxy.py  research_cn_strategy_validation.py  research_cn_thematic_stock_rotation_proxy.py  research_cn_us_long_horizon_comparison.py  smoke_cn_index_etf_tactical_rotation_dry_run.py  smoke_cn_industry_etf_rotation_dry_run.py
src/cn_equity_strategies/: __init__.py  catalog.py  combo_entrypoints.py  combo_manifests.py  (+1 more)
tests/: test_catalog.py  test_cn_csi500_multi_factor_snapshot.py  test_cn_dividend_quality_snapshot.py  test_cn_equity_combo.py  test_cn_index_etf_tactical_rotation.py  test_cn_industry_etf_rotation.py  test_cn_stock_momentum_rotation.py  test_dividend_snapshot_proxy_helpers.py  test_entrypoints.py  test_etf_rotation_weight_cap.py  test_gate_codex_app_review.py  test_industry_etf_rotation_presets.py  test_momentum_stock_pit_universe.py  test_momentum_stock_universe.py  test_promotion_gate.py  test_proxy_backtest.py  test_runtime_adapters.py
(+22 files in other folders)
