[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cn-equity-strategies"
version = "0.1.0"
description = "A-share equity strategy catalog and implementations for QuantStrategyLab platform runtimes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@780b6f8da6a6f7419a12c8f909a415624c98f8eb",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
ignore = ["E701", "E702", "E741", "F841", "F821", "B008", "F401", "F601", "E402"]
target-version = "py311"
line-length = 120
